--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,8 @@ body {
   color: var(--text-primary);
   font-family: var(--font-base);
   line-height: 1.6;
-  overflow-x: hidden;
-    min-width: 422px;
+  overflow-x:hidden;
+
 }
 
 a {
@@ -460,6 +460,7 @@ input[type="submit"]:hover {
   padding: var(--input-padding-vertical) var(--input-padding-vertical) 0;
   margin-bottom: 2em;
   box-shadow: var(--box-shadow-default);
+  max-width: 98%;
 }
 
 .promo-banner__title {
@@ -784,7 +785,7 @@ main img {
   padding: 0.75rem 1rem;
   border-radius: 0.375rem;
   text-align: center;
-  background-color: var(--color-taupe);
+  background-color: var(--color-light-beige);
   color: var(--color-dark-charcoal);
   text-decoration: none;
   font-weight: 600;
@@ -961,7 +962,7 @@ footer {
 
 .social-media-list li {
   list-style: none;
-justify-content: left;
+  justify-content: left;
   display: flex;
   position: relative;
   left: 25%;
@@ -1028,15 +1029,18 @@ justify-content: left;
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
+
   }
 
   .footer-column {
     width: 100%;
-    text-align: center;
+    align-content: center;
   }
 
-  .social-media-list {
+  .social-media-list li {
+    width:100%;
     justify-content: center;
+    left: 0;
   }
 
   .footer-contact {
