--- a/styles.css
+++ b/styles.css
@@ -621,7 +621,13 @@ input[type="submit"]:hover {
   align-content: center;
   min-height: 108vh;
   margin-top: calc(var(--header-height) * -1);
-  background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("images/MOON_GOLD_1.webp") no-repeat center/cover fixed;
+    background-image:
+    linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)),
+    url("images/MOON_GOLD_1.webp");
+  background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: var(--color-white);
   text-shadow: 0 0 2em rgba(255, 255, 255, 0.7);
 }
