--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@
 
   /* --- TEXTURE --- */
   --texture-img: url("./images/paper.webp");
+  --texture-img-2: url("./images/paper2.webp");
   --texture-opacity: 1;
   --texture-size: 512px;
 
@@ -250,6 +251,8 @@ input[type="submit"]:hover {
   padding: 0 1rem;
   height: 100%;
   background-color: var(--color-dark-charcoal);
+  z-index: 6;
+  box-shadow: var(--box-shadow-default);
 }
 
 .header .logo {
@@ -464,6 +467,9 @@ input[type="submit"]:hover {
   background-color: var(--color-taupe);
   box-shadow: var(--box-shadow-default);
   z-index: 1;
+  min-height: 40em;
+  align-content: center;
+
 }
 
 .promo-banner {
@@ -474,6 +480,7 @@ input[type="submit"]:hover {
   box-shadow: var(--box-shadow-default);
 
   width: 95%;
+  margin-top: 2em;
 }
 
 .promo-banner__title {
@@ -645,6 +652,8 @@ input[type="submit"]:hover {
   background-attachment: fixed;
   color: var(--color-white);
   text-shadow: 0 0 2em rgba(255, 255, 255, 0.7);
+  box-shadow: var(--box-shadow-default);
+  z-index: 4;
 }
 
 .hero-wrapper {
@@ -676,9 +685,6 @@ input[type="submit"]:hover {
   background-color: var(--color-olive-green);
   box-shadow: var(--box-shadow-default);
   z-index: 3;
-  margin-top: -2em;
-  margin-bottom: -2em;
-  box-shadow: var(--box-shadow-default);
 }
 
 #about h2,
@@ -801,7 +807,7 @@ main img {
 }
 
 #collection {
-  min-height: 104svh;
+  min-height: 100svh;
   align-content: center;
   box-shadow: var(--box-shadow-default);
   z-index: 2;
@@ -915,13 +921,15 @@ footer {
 /* ==================================================================
    EFFECTS & USABILITY
    ================================================================== */
-.with-texture {
+.with-texture,
+.with-texture-2 {
   position: relative;
   isolation: unset;
   overflow: visible;
 }
 
-.with-texture::before {
+.with-texture::before,
+.with-texture-2::before {
   content: "";
   position: absolute;
   top: 0;
@@ -929,7 +937,7 @@ footer {
   transform: translateX(-50%);
   width: 100%;
   height: 100%;
-  background-image: var(--texture-img);
+
   background-repeat: repeat;
   background-size: var(--texture-size) var(--texture-size);
   mix-blend-mode: multiply;
@@ -938,8 +946,18 @@ footer {
   z-index: 0;
 }
 
+.with-texture::before {
+  background-image: var(--texture-img);
+}
+
+.with-texture-2::before {
+  background-image: var(--texture-img-2);
+}
+
 .with-texture>*,
-.with-texture .sisalto {
+.with-texture-2>*,
+.with-texture .sisalto,
+.with-texture-2 .sisalto {
   position: relative;
   z-index: 1;
 }
@@ -996,6 +1014,7 @@ footer {
   justify-content: space-between;
   gap: 2rem;
   margin-bottom: var(--section-padding-vertical);
+  margin-top: var(--section-padding-vertical);
 }
 
 .footer-column {
@@ -1154,9 +1173,23 @@ footer {
 #clients {
   background-color: var(--color-dark-charcoal);
   box-shadow: var(--box-shadow-default);
+  height: 100svh;
+  align-content: center;
+  z-index: -1;
 }
 
-#clients h2, #clients p {
-    color: white; 
-  
+#clients h2,
+#clients p {
+  color: white;
+
+}
+
+#contact {
+  background-color: var(--color-light-beige);
+  z-index: -2;
+  color: var(--color-dark-charcoal);
+}
+
+#contact h2 {
+  color: var(--color-dark-charcoal);
 }
