--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ input[type="submit"]:hover {
   padding: 0 1rem;
   height: 100%;
   background-color: var(--color-dark-charcoal);
-  z-index: 6;
+  z-index: 10;
   box-shadow: var(--box-shadow-default);
 }
 
@@ -466,7 +466,7 @@ input[type="submit"]:hover {
 #promo {
   background-color: var(--color-taupe);
   box-shadow: var(--box-shadow-default);
-  z-index: 1;
+  z-index: 4;
   min-height: 40em;
   align-content: center;
 
@@ -653,7 +653,7 @@ input[type="submit"]:hover {
   color: var(--color-white);
   text-shadow: 0 0 2em rgba(255, 255, 255, 0.7);
   box-shadow: var(--box-shadow-default);
-  z-index: 4;
+  z-index: 7;
 }
 
 .hero-wrapper {
@@ -684,7 +684,7 @@ input[type="submit"]:hover {
 #about {
   background-color: var(--color-olive-green);
   box-shadow: var(--box-shadow-default);
-  z-index: 3;
+  z-index: 6;
 }
 
 #about h2,
@@ -810,7 +810,7 @@ main img {
   min-height: 100svh;
   align-content: center;
   box-shadow: var(--box-shadow-default);
-  z-index: 2;
+  z-index: 5;
 }
 
 .collection-buttons {
@@ -855,6 +855,7 @@ main img {
   background-color: var(--color-olive-green);
   padding-top: 0em;
   box-shadow: var(--box-shadow-default);
+  z-index: 3;
 }
 
 .solution-buttons {
@@ -994,6 +995,7 @@ footer {
   font-family: var(--font-base);
   font-size: 0.9rem;
   line-height: 1.4;
+  z-index: 0;
 }
 
 /* ---------------------------------------------
@@ -1157,13 +1159,14 @@ footer {
 
 #collection-content {
   background-color: var(--color-olive-green-dark);
-  max-width: 95%;
+  /*! max-width: 78%; */
   /*! border-radius: var(--border-radius); */
   overflow: hidden;
   transition: height .35s ease;
   margin-top: var(--spacing-base);
   box-shadow: var(--box-shadow-default);
-  max-width: var(--content-max-width);
+  max-width: 95%;
+  width: var(--content-max-width);
 }
 
 #collection h2 {
@@ -1175,7 +1178,7 @@ footer {
   box-shadow: var(--box-shadow-default);
   height: 100svh;
   align-content: center;
-  z-index: -1;
+  z-index: 2;
 }
 
 #clients h2,
@@ -1186,7 +1189,7 @@ footer {
 
 #contact {
   background-color: var(--color-light-beige);
-  z-index: -2;
+  z-index: 1;
   color: var(--color-dark-charcoal);
 }
 
